--- a/configs/banana/example.toml
+++ b/configs/banana/example.toml
@@ -16,13 +16,10 @@ limit = -15
 
 [strip-3]
 label = "VirtStrip0"
-bass = -3.2
-mid = 1.5
-treble = 2.1
+limit = -12
 
 [strip-4]
 label = "VirtStrip1"
-limit = -12
 
 [bus-0]
 label = "PhysBus0"
@@ -35,10 +32,12 @@ mono = true
 [bus-2]
 label = "PhysBus2"
 eq = true
+mode = "composite"
 
 [bus-3]
 label = "VirtBus0"
 eq_ab = true
+mode = "upmix61"
 
 [bus-4]
 label = "VirtBus1"
