--- a/configs/basic/example.toml
+++ b/configs/basic/example.toml
@@ -10,14 +10,13 @@ audibility = 3.2
 
 [strip-2]
 label = "VirtStrip0"
-bass = -3.2
-mid = 1.5
-treble = 2.1
 
 [bus-0]
 label = "PhysBus0"
 mute = true
+mode = "composite"
 
 [bus-1]
-label = "PhysBus1"
+label = "VirtBus0"
 mono = true
+mode = "amix"
