--- a/configs/potato/example.toml
+++ b/configs/potato/example.toml
@@ -27,9 +27,6 @@ gain = -8.8
 label = "VirtStrip0"
 A3 = true
 A5 = true
-bass = -3.2
-mid = 1.5
-treble = 2.1
 
 [strip-6]
 label = "VirtStrip1"
@@ -54,9 +51,11 @@ eq = true
 
 [bus-3]
 label = "PhysBus3"
+mode = "upmix61"
 
 [bus-4]
 label = "PhysBus4"
+mode = "composite"
 
 [bus-5]
 label = "VirtBus0"
