--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vban-cmd"
-version = "1.1.3"
+version = "1.2.0"
 description = "Python interface for the VBAN RT Packet Service (Sendtext)"
 authors = ["onyx-and-iris <code@onyxandiris.online>"]
 license = "MIT"
@@ -14,6 +14,7 @@ python = "^3.11"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 pytest-randomly = "^3.12.0"
+pytest-repeat = "^0.9.1"
 black = "^22.3.0"
 isort = "^5.10.1"
 
