--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vban-cmd"
-version = "1.3.3"
+version = "1.4.0"
 description = "Python interface for the VBAN RT Packet Service (Sendtext)"
 authors = ["onyx-and-iris <code@onyxandiris.online>"]
 license = "MIT"
@@ -8,7 +8,8 @@ readme = "README.md"
 repository = "https://github.com/onyx-and-iris/vban-cmd-python"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
+tomli = { version = "^2.0.1", python = "<3.11" }
 
 
 [tool.poetry.dev-dependencies]
