--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# quick test
-quick.py
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -153,3 +150,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# quick test
+quick.py
+
+#config
+config.toml
