--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ isort = "^5.10.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+obs = "examples.obs.__main__:main"
+observer = "examples.observer.__main__:main"
