--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,5 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-obs = "examples.obs.__main__:main"
-observer = "examples.observer.__main__:main"
+obs = "scripts:ex_obs"
+observer = "scripts:ex_observer"
