add poetry test scripts for each kind

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,10 @@ build-backend = "poetry.core.masonry.api"
 gui = "scripts:ex_gui"
 obs = "scripts:ex_obs"
 observer = "scripts:ex_observer"
-test = "scripts:test"
+basic = "scripts:test_basic"
+banana = "scripts:test_banana"
+potato = "scripts:test_potato"
+all = "scripts:test_all"
 
 [tool.tox]
 legacy_tox_ini = """
