--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ repository = "https://github.com/onyx-and-iris/vban-cmd-python"
 python = "^3.10"
 tomli = { version = "^2.0.1", python = "<3.11" }
 
-
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.1.2"
 pytest-randomly = "^3.12.0"
 pytest-repeat = "^0.9.1"
